# proiect-licenta

./: .env.example  .gitignore  pyproject.toml  requirements.txt
prompts/: image_to_cdl.txt  split_exam.txt
src/exam_processor/: __init__.py  batch.py  cli.py  client.py  figure_filter.py  models.py  schemas.py
src/validator_frontend/: .gitignore  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
src/validator_frontend/public/: validate-client.js
src/validator_frontend/scripts/: extract-crop-data.ts
src/validator_frontend/src/: client.tsx  env.d.ts  renderer.tsx  worker-configuration.d.ts
src/validator_frontend/src/backend/: batch-assignment.ts  schema.ts  types.ts
src/validator_frontend/src/backend/middleware/: session.ts
src/validator_frontend/src/frontend/: index.tsx
src/validator_frontend/src/frontend/components/: Layout.tsx  ValidationForm.tsx
src/validator_frontend/src/frontend/routes/: auth.tsx  validate.tsx  wip.txt
